--- a/predictive_maintenance.ipynb
+++ b/predictive_maintenance.ipynb
@@ -23,14 +23,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib\n",
+    "import tensorflow\n",
     "import matplotlib.pyplot as plt\n",
     "from tensorflow.keras import models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas version: 1.4.2\n",
+      "Numpy version: 1.22.3\n",
+      "Matplotlib version: 3.5.1\n",
+      "Tensorflow version: 2.4.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Pandas version: {}'.format(pd.__version__))\n",
+    "print('Numpy version: {}'.format(np.__version__))\n",
+    "print('Matplotlib version: {}'.format(matplotlib.__version__))\n",
+    "print('Tensorflow version: {}'.format(tensorflow.__version__))"
    ]
   },
   {
