Code rerun to add white background to PNGs

--- a/predictive_maintenance.ipynb
+++ b/predictive_maintenance.ipynb
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
     "ax.grid(axis='x', linestyle='--') # vertical grid lines\n",
     "plt.title('Patterns of Missing Values')\n",
     "\n",
-    "plt.savefig('img/nan_matrix.png')\n",
+    "plt.savefig('img/nan_matrix.png', facecolor='white')\n",
     "\n",
     "plt.show()"
    ]
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
     "ax[0].grid(axis='y', linestyle='--')\n",
     "ax[1].grid(axis='y', linestyle='--')\n",
     "\n",
-    "plt.savefig('img/acc_loss_graph.png')\n",
+    "plt.savefig('img/acc_loss_graph.png', facecolor='white')\n",
     "plt.show()"
    ]
   },
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
     "    xlabel = 'Timestamp')\n",
     "ax[1].legend(['Actual Values'])\n",
     "\n",
-    "plt.savefig('img/predctions.png')\n",
+    "plt.savefig('img/predctions.png', facecolor='white')\n",
     "plt.show()"
    ]
   },
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
     "ax = ConfusionMatrixDisplay(cm, display_labels=np.unique(test_y_in))\n",
     "ax.plot()\n",
     "# save to file\n",
-    "plt.savefig('img/conf_matrix.png', dpi=100)\n",
+    "plt.savefig('img/conf_matrix.png', dpi=100, facecolor='white')\n",
     "plt.show()"
    ]
   }
